move all static url to statccContent.js

--- a/Demo.MenuLoad/Demo.MenuLoad.csproj
+++ b/Demo.MenuLoad/Demo.MenuLoad.csproj
@@ -177,7 +177,9 @@
     <Content Include="Controllers\Scripts\AppAuth.js" />
     <Content Include="Controllers\Scripts\facebookAuth.js" />
     <Content Include="Controllers\Scripts\gmailAuth.js" />
+    <Content Include="Controllers\Scripts\leaveController.js" />
     <Content Include="Controllers\Scripts\signOut.js" />
+    <Content Include="Controllers\Scripts\staticContent.js" />
     <Content Include="dataTables.bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
