--- a/AkijRest.IdentityServer/AkijRest.IdentityServer.csproj
+++ b/AkijRest.IdentityServer/AkijRest.IdentityServer.csproj
@@ -241,6 +241,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\AudienceStore.cs" />
+    <Compile Include="Helpers\JWTToken.cs" />
     <Compile Include="Models\AudienceModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\CustomOAuthProvider.cs" />
