--- a/AkijRest.IdentityServer.Repository/Web.config
+++ b/AkijRest.IdentityServer.Repository/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="AkijRest.IdentityServer" connectionString="Data Source=devesql;Initial Catalog=AkijRest.IdentityServer-2;Integrated Security=false;Persist Security Info=False;User ID=devesqlrw;Password=sql@123;Connect Timeout=5000" providerName="System.Data.SqlClient" />
+    <add name="HrDbContext" connectionString="data source=devesql;initial catalog=ERP_HR;persist security info=True;user id=devesqlrw;password=sql@123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
