--- a/Demo.MenuLoad/Demo.MenuLoad.csproj
+++ b/Demo.MenuLoad/Demo.MenuLoad.csproj
@@ -155,6 +155,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LeaveTypeController.cs" />
     <Compile Include="Controllers\WoodPurchaseController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -178,6 +179,7 @@
     <Content Include="Controllers\Scripts\AppAuth.js" />
     <Content Include="Controllers\Scripts\facebookAuth.js" />
     <Content Include="Controllers\Scripts\gmailAuth.js" />
+    <Content Include="Controllers\Scripts\leaveTypeController.js" />
     <Content Include="Controllers\Scripts\leaveController.js" />
     <Content Include="Controllers\Scripts\mealController.js" />
     <Content Include="Controllers\Scripts\signOut.js" />
@@ -279,6 +281,7 @@
     <Content Include="Views\Home\Menu.cshtml" />
     <Content Include="Views\Home\GoogleAuthTest.cshtml" />
     <Content Include="Views\Home\GoogleAuthTest2.cshtml" />
+    <Content Include="Views\LeaveType\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
