--- a/AkijRest.IdentityServer.ApiFixed/AkijRest.IdentityServer.ApiFixed.csproj
+++ b/AkijRest.IdentityServer.ApiFixed/AkijRest.IdentityServer.ApiFixed.csproj
@@ -305,6 +305,10 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AkijRest.Global.UnitTests\AkijRest.Global.UnitTests.csproj">
+      <Project>{1db6b5f8-f691-42e7-9b97-ac33c8041253}</Project>
+      <Name>AkijRest.Global.UnitTests</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AkijRest.Global\AkijRest.Global.csproj">
       <Project>{b3695148-df00-4394-ad45-86da5d078773}</Project>
       <Name>AkijRest.Global</Name>
@@ -325,6 +329,9 @@
       <Project>{C6D83867-3753-4440-AB90-0B218FFF3F6F}</Project>
       <Name>LogService</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
