--- a/AkijRest.IdentityServer.Repository/Web.config
+++ b/AkijRest.IdentityServer.Repository/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AkijRest.IdentityServer" connectionString="Data Source=devesql;Initial Catalog=AkijRest.IdentityServer-2;Integrated Security=false;Persist Security Info=False;User ID=devesqlrw;Password=sql@123;Connect Timeout=5000" providerName="System.Data.SqlClient" />
+    <add name="AkijRest.IdentityServer" connectionString="Data Source=devesql;Initial Catalog=AkijRest.IdentityServer-2;Integrated Security=false;Persist Security Info=False;User ID=devesqlrw;Password=sql@123;Connect Timeout=5000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
     <add name="HrDbContext" connectionString="data source=devesql;initial catalog=ERP_HR;persist security info=True;user id=devesqlrw;password=sql@123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
