add leave repository test

--- a/AkijRest.Identity.Repository.UnitTests/AkijRest.Identity.Repository.UnitTests.csproj
+++ b/AkijRest.Identity.Repository.UnitTests/AkijRest.Identity.Repository.UnitTests.csproj
@@ -66,6 +66,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LeaveRepositoryTest.cs" />
     <Compile Include="LeaveTypeRepositoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
