update some consolated package and change a leave entry method and test

--- a/AkijRest.IdentityServer.ApiFixed/Web.config
+++ b/AkijRest.IdentityServer.ApiFixed/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="AkijRest.IdentityServer" connectionString="Data Source=devesql;Initial Catalog=AkijRest.IdentityServer-2;Integrated Security=false;Persist Security Info=False;User ID=devesqlrw;Password=sql@123;Connect Timeout=5000" providerName="System.Data.SqlClient" />
     <add name="HrDbContext" connectionString="data source=devesql;initial catalog=ERP_HR;persist security info=True;user id=devesqlrw;password=sql@123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
