--- a/AkijRest.IdentityServer.ApiFixed/Web.config
+++ b/AkijRest.IdentityServer.ApiFixed/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="AkijRest.IdentityServer" connectionString="Data Source=devesql;Initial Catalog=AkijRest.IdentityServer-2;Integrated Security=false;Persist Security Info=False;User ID=devesqlrw;Password=sql@123;Connect Timeout=5000" providerName="System.Data.SqlClient" />
     <add name="HrDbContext" connectionString="data source=devesql;initial catalog=ERP_HR;persist security info=True;user id=devesqlrw;password=sql@123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="GlobalDbContext" connectionString="data source=devesql;initial catalog=ERP_Global;persist security info=True;user id=devesqlrw;password=sql@123;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
