--- a/Demo.MenuLoad/Demo.MenuLoad.csproj
+++ b/Demo.MenuLoad/Demo.MenuLoad.csproj
@@ -183,6 +183,7 @@
     <Content Include="Controllers\Scripts\facebookAuth.js" />
     <Content Include="Controllers\Scripts\gmailAuth.js" />
     <Content Include="Controllers\Scripts\adminLeaveController.js" />
+    <Content Include="Controllers\Scripts\taskController.js" />
     <Content Include="Controllers\Scripts\profileController.js" />
     <Content Include="Controllers\Scripts\leaveTypeController.js" />
     <Content Include="Controllers\Scripts\leaveController.js" />
