--- a/AkijRest.IdentityServer.Repository/AkijRest.IdentityServer.Repository.csproj
+++ b/AkijRest.IdentityServer.Repository/AkijRest.IdentityServer.Repository.csproj
@@ -97,6 +97,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dtos\AttendanceDto.cs" />
     <Compile Include="Dtos\ExternalUserDto.cs" />
     <Compile Include="Dtos\LeaveDto.cs" />
     <Compile Include="Dtos\LeaveEveryDayDto.cs" />
@@ -170,8 +171,10 @@
     <Compile Include="Models\Token.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\AttendanceRepository.cs" />
     <Compile Include="Repositories\Interfaces\ILeaveRepository.cs" />
     <Compile Include="Repositories\Interfaces\ILeaveTypeRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IAttendanceRepository.cs" />
     <Compile Include="Repositories\Interfaces\IMealRepository.cs" />
     <Compile Include="Repositories\Interfaces\IProfileRepository.cs" />
     <Compile Include="Repositories\Interfaces\IRoleGroupRepository.cs" />
